--- a/baitapandroid/app/src/main/res/layout/bai1.xml
+++ b/baitapandroid/app/src/main/res/layout/bai1.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical"
     android:background="#FFFFFF"
     android:id="@+id/main"
-    tools:context=".Quocbai1">
+    tools:context=".bai1">
 
     <TextView
         android:layout_width="match_parent"
